pingpong-service-simple/src/k8s/internet-exposure/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
